--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
-    "joi": "^17.6.0",
+    "joi": "^17.6.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
@@ -54,6 +54,7 @@
     "@babel/register": "^7.18.9",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
+    "@types/joi": "^17.2.3",
     "@types/node": "^18.7.15",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
