--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
+    "query-string": "^7.1.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.9",
     "uuid": "^8.3.2",
